improved layout, colors and responsiveness

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mimmofalena.github.io/domenico-portfolio",
+  "homepage": "https://mimmofalena.github.io/domenico-portfolio/",
   "name": "domenico-portfolio-website",
   "version": "0.1.0",
   "private": true,
